--- a/src/Frontend/pagina principal/index.html
+++ b/src/Frontend/pagina principal/index.html
@@ -60,15 +60,15 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-    <!-- <script>
-        const list = document.querySelectorAll('.list');
+    <script>
+        const list = document.querySelectorAll('.lista');
         function activeLink(){
             list.forEach((item) =>
-            item.classList.remove('.active'));
-            this.classList.add('.active');
+            item.classList.remove('active'));
+            this.classList.add('active');
         }
         list.forEach((item) =>
-        item.addEventListener("click", activeLink));
-    </script> -->
+        item.addEventListener('click', activeLink));
+    </script>
 </body>
 </html>
