--- a/src/Frontend/login/login.html
+++ b/src/Frontend/login/login.html
@@ -25,7 +25,12 @@
                     <label for="senha"> Senha</label>
                     <input type="password" name="senha" placeholder="Senha">
                 </div>
-                <button class="btn-login">Login</button>
+                <button class="btn-login">
+                    <a href="../pagina principal/index.html">Login</a>
+                </button>
+                <button class="btn-cadastro">
+                    <a href="#">Cadastrar</a>
+                </button>
                 
 
             </div>
