--- a/src/Frontend/pagina principal/index.html
+++ b/src/Frontend/pagina principal/index.html
@@ -24,7 +24,7 @@
                 </a>
             </li>
             <li class="lista">    
-                <a href="#">
+                <a href="../revisar candidatos/revisar.html">
                     <span class="icone"><ion-icon name="folder-outline"></ion-icon></span>
                     <span class="title">Revisar candidatos</span>
                 </a>
@@ -68,7 +68,7 @@
                 </a>
             </li>
             <li class="lista">    
-                <a href="#">
+                <a href="../login/login.html">
                     <span class="icone"><ion-icon name="exit-outline"></ion-icon></span>
                     <span class="title">Sair</span>
                 </a>
