--- a/src/Frontend/vagas/CriarVagas.html
+++ b/src/Frontend/vagas/CriarVagas.html
@@ -25,7 +25,7 @@
                 </a>
             </li>
             <li class="lista">    
-                <a href="#">
+                <a href="../revisar candidatos/revisar.html">
                     <span class="icone"><ion-icon name="folder-outline"></ion-icon></span>
                     <span class="title">Revisar candidatos</span>
                 </a>
@@ -49,7 +49,7 @@
                     <span class="title">Objetivos da vaga</span>
                 </a>
                 
-                <a class="Vagas_opc" href="#">
+                <a class="Vagas_opc" href="./adicionarCandidatos.html">
                     <span class="icon"><ion-icon class="icon" name="caret-forward-outline"></ion-icon></span>
                     <span class="title">Adcionar candidatos</span>
                 </a>
@@ -69,7 +69,7 @@
                 </a>
             </li>
             <li class="lista">    
-                <a href="#">
+                <a href="../login/login.html">
                     <span class="icone"><ion-icon name="exit-outline"></ion-icon></span>
                     <span class="title">Sair</span>
                 </a>
@@ -102,7 +102,7 @@
             <button class="botao">Cancelar</button>
         </a>
 
-        <a href="#">
+        <a href="./ObjetivoVaga.html">
             <button class="botao botao2">
                 <ion-icon name="chevron-forward-outline"></ion-icon>
                 Próxima etapa
