--- a/src/Frontend/vagas/ObjetivoVaga.html
+++ b/src/Frontend/vagas/ObjetivoVaga.html
@@ -20,7 +20,7 @@
                 </a>
             </li>
             <li class="lista">    
-                <a href="#">
+                <a href="../cadastrar candidatos/cadastrar.html">
                     <span class="icone"><ion-icon name="person-add-outline"></ion-icon></span>
                     <span class="title">Cadastrar candidatos</span>
                 </a>
