--- a/src/Frontend/vagas/adicionarCandidatos.html
+++ b/src/Frontend/vagas/adicionarCandidatos.html
@@ -19,7 +19,7 @@
                 </a>
             </li>
             <li class="lista">    
-                <a href="#">
+                <a href="../cadastrar candidatos/cadastrar.html">
                     <span class="icone"><ion-icon name="person-add-outline"></ion-icon></span>
                     <span class="title">Cadastrar candidatos</span>
                 </a>
@@ -131,10 +131,16 @@
         </a>
 
         <a href="#">
-            <button class="botao botao2">
-                FInalizar
+            <button class="botao botao2" onClick="funcao()">
+                Finalizar
             </button>
         </a>
+        <script>
+            function funcao()
+            {
+                alert("Criada com sucesso!");
+            }
+        </script>
     </section>
 </div>
 </body>
