--- a/src/Frontend/Cadastro de usuario/Cadastro.html
+++ b/src/Frontend/Cadastro de usuario/Cadastro.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"> 
-    <title>Login</title>
+    <title>cadastro de usuario</title>
 </head>
 <body>
-    <div class="main-login"> 
-         <div class="left-login">
-            <img src="Eficiêcia.gif" class="left-login-image" alt="imagem animação">
+    <div class="main-cadastro"> 
+         <div class="left-cadastro">
+            <img src="Eficiêcia.gif" class="left-cadastro-image" alt="imagem animação">
          </div>
-         <div class="right-login">
-            <div class="card-login">
+         <div class="right-cadastro">
+            <div class="card-cadastro">
 
-                <h1>Login </h1>
+                <h1>Cadastrar</h1>
+                <div class="textfield">
+                    <label for="nome"> Nome</label>
+                    <input type="text" name="Nome" placeholder="Email">
+                </div>
+
                 <div class="textfield">
                     <label for="email"> Email</label>
                     <input type="text" name="Email" placeholder="Email">
@@ -25,13 +30,11 @@
                     <label for="senha"> Senha</label>
                     <input type="password" name="senha" placeholder="Senha">
                 </div>
-                <button class="btn-login">
-                    <a href="../pagina principal/index.html">Login</a>
-                </button>
-                <button class="btn-cadastro">
-                    <a href="#">Cadastrar</a>
-                </button>
+
                 
+                <a href="#">
+                    <button class="btn-cadastro"> Cadastrar </button>
+                </a>                
 
             </div>
          </div>
