--- a/src/Frontend/Cadastro de usuario/Cadastro.html
+++ b/src/Frontend/Cadastro de usuario/Cadastro.html
@@ -33,7 +33,7 @@
 
                 
                 <a href="#">
-                    <button class="btn-cadastro"> Cadastrar </button>
+                    <button class="btn-cadastro"> Salvar </button>
                 </a>                
 
             </div>
