--- a/src/Frontend/login/login.html
+++ b/src/Frontend/login/login.html
@@ -25,12 +25,15 @@
                     <label for="senha"> Senha</label>
                     <input type="password" name="senha" placeholder="Senha">
                 </div>
-                <button class="btn-login">
-                    <a href="../pagina principal/index.html">Login</a>
-                </button>
-                <button class="btn-cadastro">
-                    <a href="#">Cadastrar</a>
-                </button>
+                <a href="../pagina principal/index.html">
+                    <button class="btn-login">Login</button>
+                </a>
+
+                 <a href="../Cadastro de usuario/Cadastro.html">
+                    <button class="btn-cadastro"> Cadastrar
+                    </button>
+                 </a>
+                
                 
 
             </div>
