--- a/src/Frontend/vagas/CriarVagas.html
+++ b/src/Frontend/vagas/CriarVagas.html
@@ -95,10 +95,10 @@
     <h2>Qual vaga gostaria de criar?</h2>
     <section class="secao">
         <h3>Título da vaga</h3>
-        <input type="text" name="título da vaga" value="título da vaga">
+        <input type="text" name="título da vaga" placeholder="título da vaga">
         <h3>Descrição da vaga</h3>
-        <textarea name="descrption" value="Descrição da vaga" cols="30" rows="10">Descrição da vaga</textarea>
-        <a href="#">
+        <textarea name="descrption" placeholder="Descrição da vaga" cols="30" rows="10">Descrição da vaga</textarea>
+        <a href="../pagina principal/index.html">
             <button class="botao">Cancelar</button>
         </a>
 
