--- a/src/Frontend/vagas/ObjetivoVaga.html
+++ b/src/Frontend/vagas/ObjetivoVaga.html
@@ -168,7 +168,7 @@
         </script>
             
         
-        <a href="#">
+        <a href="../pagina principal/index.html">
             <button class="botao">Cancelar</button>
         </a>
 
