--- a/src/Frontend/Cadastro de usuario/Cadastro.html
+++ b/src/Frontend/Cadastro de usuario/Cadastro.html
@@ -32,7 +32,7 @@
                 </div>
 
                 
-                <a href="#">
+                <a href="../login/login.html">
                     <button class="btn-cadastro"> Salvar </button>
                 </a>                
 
